export interface Project {
  create(args: string[]): void;
}
