' SPDX-License-Identifier: AGPL-3.0-only + AI-GPL-Addendum
' Copyright (c) 2025 The Web4Articles Authors
' Copyleft: See AGPLv3 (./LICENSE) and AI-GPL Addendum (./AI-GPL.md)
' Backlinks: /LICENSE , /AI-GPL.md
' Use of `scrum.pmo` roles/process docs with AI is subject to AI-GPL copyleft unless dual-licensed.

@startuml
title GitScrumProject CLI OOP Architecture


interface CLI {
  +start()
}

interface Project {
  +create(args: string[])
}

class DefaultCLI {
  +start()
}

class ParameterParser {
  -args: string[]
  +parse(): ParseArgs
}

class ParseArgs {
  +className
  +command
  +type
  +projectName
}

class GitScrumProject {
  -cli: CLI
  +static start()
  +create(args: string[])
  -createProject(projectName: string)
}

GitScrumProject o-- DefaultCLI : composes
DefaultCLI o-- ParameterParser : uses

CLI <|.. DefaultCLI
Project <|.. GitScrumProject

@enduml
